tests/baselines/reference/project/intReferencingExtAndInt/amd/intReferencingExtAndInt.errors.txt
internal2.ts(2,21): error TS1147: Import declarations in an internal module cannot reference an external module.
internal2.ts(2,21): error TS2307: Cannot find external module 'external2'.


==== internal2.ts (2 errors) ====
    module outer {
    	import g = require("external2")
    	                   ~~~~~~~~~~~
!!! error TS1147: Import declarations in an internal module cannot reference an external module.
    	                   ~~~~~~~~~~~
!!! error TS2307: Cannot find external module 'external2'.
    	export var a = g.square(5);
    	export var b = "foo";
    }